--- a/WpfToDoList/WpfToDoList/WpfToDoList.csproj
+++ b/WpfToDoList/WpfToDoList/WpfToDoList.csproj
@@ -10,9 +10,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.7" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="ToDoListDB.mdf">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
